--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,8 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">#262626</item>
+        <item name="android:colorBackground">#212121</item>
+        <item name="android:navigationBarColor">#212121</item>
+        <item name="android:windowLightNavigationBar">false</item>
         <item name="android:textColor">#000000</item>
     </style>
 
