--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,13 +1,12 @@
-<resources>
-
+<resources xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#262626</item>
         <item name="android:colorBackground">#212121</item>
-        <item name="android:navigationBarColor">#212121</item>
-        <item name="android:windowLightNavigationBar">false</item>
+        <item name="android:navigationBarColor" tools:targetApi="27">#262626</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
         <item name="android:textColor">#000000</item>
     </style>
-
 </resources>
